--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,14 @@
     "configurations": [
         {
             "type": "java",
+            "name": "TaskMaster_Main",
+            "request": "launch",
+            "mainClass": "Project.TaskMaster.src.TaskMaster_Main",
+            "projectName": "AMAA-Project_d65a0aa6",
+            "vmArgs": "--module-path C:/OpenFX/javafx-sdk-17.0.6/lib --add-modules javafx.controls,javafx.fxml"
+        },
+        {
+            "type": "java",
             "name": "Current File",
             "request": "launch",
             "mainClass": "${file}"
@@ -16,7 +24,7 @@
             "request": "launch",
             "mainClass": "Project.TaskMaster.src.HelloWorld",
             "projectName": "AMAA-Project_d65a0aa6",
-            "vmArgs": "--module-path C:/OpenFX/javafx-sdk-17.0.6/lib --add-modules javafx.controls,javafx.fxml",
+            "vmArgs": "--module-path C:/OpenFX/javafx-sdk-17.0.6/lib --add-modules javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
