--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.media.jar",
         "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.swing.jar",
         "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.web.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar"
+        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar",
+        "Project/TaskMaster/lib/opencsv-3.8.jar"
     ]
 }
