--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,7 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.base.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.controls.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.fxml.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.graphics.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.media.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.swing.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx.web.jar",
-        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar",
-        "c:\\javafx-sdk-17.0.6\\lib\\javafx-swt.jar",
+        "c:\\OpenFX\\javafx-sdk-17.0.6\\lib\\*.jar",
         "Project/TaskMaster/lib/opencsv-3.8.jar"
     ]
 }
